<resources>
    <string name="app_name">Lap Counter</string>
    <string name="select_a_distance">Select a Distance:</string>
    <string name="next">Next</string>
    <string name="App">Lap Timer</string>
    <string name="help">Help</string>
    <string name="helpLine1">Pick an event from the list to set the number of laps for the race.</string>
    <string name="helpLine2">Hit + in the menu bar to add a runner, and click on their number and name to edit.</string>
    <string name="helpLine3">When the race starts, start the stopwatch!</string>
    <string name="helpLine4">Each time a racer finishes a lap, hit the lap button and the counter will decrease and display their projected pace.</string>
    <string name="helpLine5">Now go count laps like a pro!</string>
    <string name="back">Back</string>
    <string name="new_runner">New Runner</string>
    <string name="time_text" translatable="false">%02d : %02d : %02d</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="lapstogo">lapsToGo</string>
    <string name="_00_00" translatable="false">00:00</string>
    <string name="clicktosetdistance">Click to set Distance</string>
    <string name="record_text">Event Record:</string>
    <string name="name">name</string>
    <string name="lap">Lap</string>
    <string name="clear_records">Clear Record</string>
    <string name="lap_split">Split</string>
    <string name="projected">Projected</string>


    <string-array name="events_array">
        <item>800</item>
        <item>1600</item>
        <item>3000</item>
        <item>5000</item>
        <item>10000</item>
    </string-array>

</resources>