<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/helpLine1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helpLine1"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.120000005" />

    <TextView
        android:id="@+id/helpLine2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helpLine2"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helpLine1"
        app:layout_constraintVertical_bias="0.120000005" />

    <TextView
        android:id="@+id/helpLine3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helpLine3"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helpLine2"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/helpLine4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helpLine4"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helpLine3"
        app:layout_constraintVertical_bias="0.13999999" />

    <TextView
        android:id="@+id/helpLine5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helpLine5"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helpLine4"
        app:layout_constraintVertical_bias="0.84000003" />
</androidx.constraintlayout.widget.ConstraintLayout>